Fixed home page text spacing & header, footer spacing a little

--- a/footer/styles.css
+++ b/footer/styles.css
@@ -11,10 +11,10 @@ footer {
   font-weight: 500;
 
   position: absolute;
-  height: 400px;
   width:100%;
 
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: flex-start;
   padding-top: 68px;
@@ -40,7 +40,7 @@ footer > p {
   line-height: 161%;
   text-align: right;
   letter-spacing: 0.03em;
-  bottom: 0px;
+  bottom: 3px;
 }
 
 footer a {
@@ -118,6 +118,7 @@ footer button:hover{
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  padding-bottom: 68px;
 }
 
 #col3 p {
