--- a/home/style.css
+++ b/home/style.css
@@ -1,201 +1,190 @@
 /* Stlying for the home page */
 
 .top {
-    background-image: url("images/home-hero.png");
-    background-size: cover;
+  background-image: url("images/home-hero.png");
+  background-size: cover;
 
-    position: absolute;
-    height: 860px;
-    width: 100%;
-    left: 0px;
-    top: 0px;
-    border-radius: 0px;
-    background-blend-mode: overlay;
-
-    display: flex;
-
+  position: absolute;
+  height: 860px;
+  width: 100%;
+  left: 0px;
+  top: 0px;
+  border-radius: 0px;
+  background-blend-mode: overlay;
 }
 
 .top-text {
-    margin-left:80px;
-    padding: 245px 0;
+  margin-left:80px;
+  padding: 245px 0;
 }
+
 h1 {
-    color: #24173F;
-    font-family: 'El Messiri', sans-serif;
-    font-size: 80px;
-    letter-spacing: -2%;
+  color: #24173F;
+  font-family: 'El Messiri', sans-serif;
+  font-size: 80px;
+  letter-spacing: -2%;
 }
 
 #icon{
-    position: absolute;
-    bottom: 8px;
-    left:50%
+  position: absolute;
+  bottom: 8px;
+  left:50%
 }
 
 #bottom {
-    position: absolute;
-    top: 860px;
-    width: 100vw;
+  position: absolute;
+  top: 860px;
+  width: 100vw;
 }
 
 .wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 750px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 750px;
 }
 
-  .image1 #homeImage1 {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-  }
+.image1 #homeImage1 {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 
-  .image2  #homeImage2 {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-  }
+.image2  #homeImage2 {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 
-  .goal {
-      text-align:center;
-      background-color: #FFFFFF;
-      padding: 115px 0;
-  }
+.goal, .volunteer {
+  text-align: center;
+  background-color: #FFFFFF;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .goal .goal-text{
-    margin-right:80px;
-  }
+.goal-text, .volunteer-text {
+  margin:50px;
+}
 
-  .volunteer {
-      text-align:center;
-      background-color:#F9F1FF;
-      padding: 115px 0;
-  }
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 48px;
+  color: #4B2E83;
+  letter-spacing: -2%;
+}
 
-  .volunteer .volunteer-text {
-    margin-right:80px;
-    margin-left:80px;
-  }
+subtitle {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
+  color: rgb(87,87,87);
+  line-height:140%;
+}
 
-  h2{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 48px;
-    color: #4B2E83;
-    letter-spacing: -2%;
-  }
+p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  color: #24173F;
+  line-height:140%;
+}
 
-   subtitle{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    color: rgb(87,87,87);
-    line-height:140%;
-  }
+#button1{
+  /* Button */
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  letter-spacing: 3%;
+  font-size: 18px;
+  line-height: 22px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 200px;
+  color: #FFFBF2;
 
-  p {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
-    color: #24173F;
-    line-height:140%;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
 
-  #button1{
-    /* Button */
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    letter-spacing: 3%;
-    font-size: 18px;
-    line-height: 22px;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 200px;
-    color: #FFFBF2;
+  position: static;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 16px;
+  background: #7E67AA;
+  border-radius: 8px;
+  border:none;
 
-    position: static;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
-
-    background: #7E67AA;
-    border-radius: 8px;
-    border:none;
-
-    width: 304px;
-    height: 64px;
-
+  width: 304px;
+  height: 64px;
 }
 
 #button1:hover{
-    background-color: #FFFFFF;
-    color:#4B2E83;
+  background-color: #FFFFFF;
+  color:#4B2E83;
 }
 
 #button2 {
-    /* button text */
+  /* button text */
 
-width: 160px;
-height: 32px;
+  width: 160px;
+  height: 32px;
 
-/* Button */
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 700;
-font-size: 18px;
-line-height: 22px;
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+  /* Button */
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 
-/* Night */
-color: #2C1B4C;
+  /* Night */
+  color: #2C1B4C;
 
 
-/* Inside auto layout */
-flex: none;
-order: 0;
-flex-grow: 0;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 
-/* _Secondary Button Structure */
+  /* _Secondary Button Structure */
 
-box-sizing: border-box;
+  box-sizing: border-box;
 
-/* Auto layout */
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 16px;
-gap: 8px;
+  /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  gap: 8px;
 
-width: 240px;
-height: 64px;
+  width: 240px;
+  height: 64px;
 
-/* White */
-background: #FFFFFF;
-/* Royal Purple */
-border: 3px solid #4B2E83;
-border-radius: 8px;
+  /* White */
+  background: #FFFFFF;
+  /* Royal Purple */
+  border: 3px solid #4B2E83;
+  border-radius: 8px;
 
-/* Inside auto layout */
-flex: none;
-order: 0;
-flex-grow: 0;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
 #button2:hover{
-    background-color: #4B2E83;
-    color:#FFFBF2;
+  background-color: #4B2E83;
+  color:#FFFBF2;
 }
 
 footer {
